# Flask-ZooRESTAPI

./: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requiremet.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: __init__.py  config.py  jwtdecorator.py
app/Config/: dev.py  testing.py
app/DAL/: AnimalDAL.py  AuthDAL.py  EmployeeDAL.py  roleDAL.py
app/controllers/: AuthController.py  anima_controller.py  employee_controller.py  role_controller.py
app/models/: animal.py  employee.py  role.py  user.py
app/routes/: api.py
migrations/versions/: 163aa13bfdee_create_role_table_check.py  297a4a0b1875_add_special_requirement_in_animal.py  4f96207b6453_update_employee_unique_name_and_email.py  50783d11d944_add_user_and_jwt_auth.py  584840b9518f_update_add_join_date_to_employee.py  7026b7aa9f0d_add_role_on_user_to_auth.py  90d69224ab4e_create_animals_table.py  ab8da226de94_update_role_to_nullable_value.py  afb35424a6db_create_emplyee_table_check.py
test/: conftest.py  test_animal.py  test_auth.py  test_employee.py  test_role.py
